--- a/source/sass/scss/objects/blocks/_site-hero.scss
+++ b/source/sass/scss/objects/blocks/_site-hero.scss
@@ -3,7 +3,6 @@
 
   height: 70%;
   position: relative;
-  overflow: hidden;
 
   background-image: url("../../images/sample/pro-background.jpg");
   background-position: 50% 50%;
